2010-04-08  yael aharon  <yael.aharon@nokia.com>

        Reviewed by Darin Adler.

        Accessibility support for progress element
        https://bugs.webkit.org/show_bug.cgi?id=37275

        Implement AccessibilityProgressIndicator to hook up progress element to accessibility framework.

        Test: platform/mac/accessibility/progressbar.html

        * GNUmakefile.am:
        * WebCore.gypi:
        * WebCore.pro:
        * WebCore.vcproj/WebCore.vcproj:
        * WebCore.xcodeproj/project.pbxproj:
        * accessibility/AXObjectCache.cpp:
        (WebCore::AXObjectCache::getOrCreate):
        * accessibility/AccessibilityProgressIndicator.cpp: Added.
        (WebCore::AccessibilityProgressIndicator::AccessibilityProgressIndicator):
        (WebCore::AccessibilityProgressIndicator::create):
        (WebCore::AccessibilityProgressIndicator::accessibilityIsIgnored):
        (WebCore::AccessibilityProgressIndicator::valueForRange):
        (WebCore::AccessibilityProgressIndicator::maxValueForRange):
        (WebCore::AccessibilityProgressIndicator::minValueForRange):
        (WebCore::AccessibilityProgressIndicator::element):
        * accessibility/AccessibilityProgressIndicator.h: Added.
        (WebCore::AccessibilityProgressIndicator::roleValue):
        (WebCore::AccessibilityProgressIndicator::isProgressIndicator):
        * rendering/RenderProgress.cpp:
        (WebCore::RenderProgress::updateFromElement):
        (WebCore::RenderProgress::progressElement):
        * rendering/RenderProgress.h:

2010-04-12  Dumitru Daniliuc  <dumi@chromium.org>

        Reviewed by Dimitri Glazkov.

        Throwing a SECURITY_ERR when openDatabase() cannot open a database
        for whatever reason, as required by the spec.
        https://bugs.webkit.org/show_bug.cgi?id=33916

        * bindings/js/JSDOMWindowCustom.cpp:
        (WebCore::JSDOMWindow::openDatabase):
        * bindings/v8/custom/V8DOMWindowCustom.cpp: